syntax = "proto3";
package protobuf.chat.v1;

import "protobuf/model/chat/v1/chat.proto";

option go_package = "protobuf/chat/v1";

service ChatService {
  rpc GetChat(GetChatRequest) returns (GetChatResponse) {}
  rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsResponse) {}
  rpc CreateDirect(CreateDirectRequest) returns (CreateDirectResponse) {}
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {}
  rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse) {}
}

message ChatEventRequest {}

message ChatEventResponse {
  bytes data = 2;
}

message GetChatRequest {
  string chat_id = 1;
}

message GetChatResponse {
  model.chat.v1.Chat chat = 1;
}

message GetUserChatsRequest {
  string user_id = 1;
}

message GetUserChatsResponse {
  repeated model.chat.v1.Chat chats = 1;
}

message CreateDirectRequest {
  string user_id = 1;
  string recipient_user_id = 2;
}

message CreateDirectResponse {
  model.chat.v1.Chat chat = 1;
}

message CreateGroupRequest {
  string user_id = 1;
  string title = 2;
  string username = 3;
  string description = 4;
}

message CreateGroupResponse {
  model.chat.v1.Chat chat = 1;
}

message CreateChannelRequest {
  string title = 1;
  string username = 2;
  string description = 3;
}

message CreateChannelResponse {
  model.chat.v1.Chat chat = 1;
}
