syntax = "proto3";
package protobuf.message.v1;

import "protobuf/model/message/v1/message.proto";

option go_package = "protobuf/message/v1";

service MessageService {
  rpc FetchMessages(FetchMessagesRequest) returns (FetchMessagesResponse) {}
  rpc SendTextMessage(SendTextMessageRequest) returns (SendTextMessageResponse) {}
}

message FetchMessagesRequest {
  string chat_id = 1;
}

message FetchMessagesResponse {
  repeated protobuf.model.message.v1.Message messages = 1;
}

message SendTextMessageRequest {
  string chat_id = 1;
  string text = 2;
  string ack_id = 3;
}

message SendTextMessageResponse {
  protobuf.model.message.v1.Message message = 1;
}
